--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,35 @@ p{
     margin: 10px;
     width: 300px;
 }
+
+.humidityB{
+    font-family: monospace;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    border: none;
+    border-radius: 5px;
+}
+
+.humidityP{
+    align-items: center;
+    position: fixed;
+    font-size: 16px;
+    display: none;
+}
+
+.humidityB:hover ~ .humidityP {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: monospace;
+    background-color: white;
+    border: #333 solid 3px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.humidityDiv{
+    display: flex;
+    flex-direction: row;
+}
